fixed client section and flex gap

--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -197,7 +197,6 @@
 @mixin body6 {
   font-size: 14px;
   line-height: 1.43;
-  text-transform: uppercase;
 }
 
 @mixin body7 {
