--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -222,7 +222,6 @@
 .sub-footer__left {
   display: flex;
   flex-direction: column;
-  gap: toRem(8);
 
   @media screen and (max-width: 768px) {
     padding-top: toRem(32);
@@ -231,59 +230,48 @@
 
 .sub-footer__links {
   display: flex;
-  gap: 16px;
   align-items: center;
+  margin-bottom: toRem(8);
+
+  & > *:not(:last-child) {
+    margin-right: toRem(16);
+  }
 }
 
 .dot {
   overflow: hidden;
-
-  &::before {
-    content: '.';
-    display: block;
-    width: 4px;
-    height: 4px;
-    background-color: $footer-text;
-    border-radius: toRem(1);
-  }
+  width: toRem(4);
+  height: toRem(4);
+  background-color: $footer-text;
+  border-radius: toRem(1);
 }
 
 .sub-footer__design {
   display: flex;
   gap: 12px;
+  color: $design-text;
+}
 
-  & p {
-    color: $design-text;
-  }
+.design-link {
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
+  color: $white;
+}
 
-  & a {
-    display: flex;
-    gap: 4px;
-    align-items: center;
-    text-transform: uppercase;
-    color: $white;
-
-    &::before {
-      content: '';
-      background-image: url('img/icon/design-logo.svg');
-      display: block;
-      width: 16px;
-      height: 14px;
-    }
-  }
+.design-link__text {
+  margin-left: toRem(4);
 }
 
 .sub-footer__right {
   display: flex;
   flex-direction: column;
-  gap: toRem(16);
 
   & p {
     @include caption2;
   }
 
   @media screen and (max-width: 768px) {
-    gap: toRem(8);
     padding-bottom: toRem(32);
     border-bottom: 1px solid $border-color;
     width: 100%;
@@ -293,13 +281,14 @@
 .social-links {
   align-self: flex-end;
   display: flex;
-  gap: toRem(12);
+  margin-top: toRem(16);
 
-  & a {
-    display: flex;
+  & > *:not(:last-child) {
+    margin-right: toRem(12);
   }
 
   @media screen and (max-width: 768px) {
     align-self: flex-start;
+    margin-top: toRem(8);
   }
 }
